--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "delete": "^1.1.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-front-matter": "^1.3.0",
+    "gulp-fs": "0.0.2",
+    "gulp-markdown": "^5.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^1.2.0",
     "gulp-typescript": "^5.0.1",
+    "gulp-wrap": "^0.15.0",
+    "nunjucks": "^3.2.0",
     "typescript": "^3.7.2"
   },
   "devDependencies": {
